--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
               run: sudo docker pull augustod3v/api-ec2:latest
         
             - name: Remove docker container
-              run: docker rm -f api-ec2
+              run: sudo docker rm -f api-ec2
         
             - name: Run Docker container
-              run: docker run -d -p 3000:3000 --name api-ec2 augustod3v/api-ec2
+              run: sudo docker run -d -p 3000:3000 --name api-ec2 augustod3v/api-ec2
